# tree-sitter-prolog

./: .gitattributes  .gitignore  .woodpecker.yml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  test.pl  tree-sitter.json
bindings/c/: tree-sitter-problog.h  tree-sitter-problog.pc.in  tree-sitter-prolog.h  tree-sitter-prolog.pc.in
bindings/go/: binding.go  binding_problog.go  binding_prolog.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js  problog.js  prolog.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_problog/: __init__.py  binding.c
bindings/python/tree_sitter_prolog/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterProlog/: prolog.h
bindings/swift/TreeSitterPrologTests/: TreeSitterPrologTests.swift
examples/: example1.pl  example2.pl  example3.pl  example4.pl  example7.pl  example8.nopl
grammars/: dprint.json  grammar.js  package.json
grammars/problog/: grammar.js  package.json
grammars/problog/examples/: example10.pl  example3.pl  example6.pl  example8.pl
grammars/problog/queries/: highlights.scm  indents.scm
grammars/problog/src/: grammar.json  node-types.json  (+1 more)
grammars/prolog/: grammar.js  package.json
grammars/src/: grammar.json  parser.c
queries/: highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: problog.txt  simple.txt
test/highlight/: example10.pl  iso.pl  problog.pl
(+9 files in other folders)
