[package]
name = "tree-sitter-prolog"
description = "Prolog grammar for the tree-sitter parsing library"
version = "3.0.2"
keywords = ["incremental", "parsing", "prolog"]
categories = ["parsing", "text-editors"]
repository = "https://codeberg.org/foxy/tree-sitter-prolog"
edition = "2021"
autoexamples = false
license = "AGPL-3.0"

build = "bindings/rust/build.rs"
include = [
  "LICENSE",
  "bindings/rust/*",
  "grammars/*/grammar.js",
  "grammars/*/queries/*",
  "grammars/*/src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.24"
